Fix Bug 373363 - Kmail folder properties aren't shown after closing them

Apply patch from Maximiliano Curia
Thanks a lot
FIXED-IN: 5.4.0
BUG: 373363